# ninjango-board

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/board/: admin.py  models.py
src/board/domain/: board_models.py  board_repository.py  models.py  repository.py
src/board/domain/migrations/: 0001_initial.py
src/board/infra/: admin.py  apps.py
src/board/infra/migrations/: 0002_board_single_index.py
src/board/presentation/: board_controller.py  board_schema.py  controller.py  schema.py
src/board/service/: board_service.py  service.py
src/comment/: admin.py  models.py
src/comment/domain/: models.py
src/comment/infra/: admin.py  apps.py
src/comment/infra/migrations/: 0001_initial.py  0002_alter_comment_board.py  0003_alter_comment_board.py
src/comment/presentation/: controller.py  schema.py
src/comment/service/: service.py
src/core/: api.py  settings.py  urls.py
src/core/decorator/: repository.py
src/core/exceptions/: exceptions.py
src/core/infra/: settings.py
src/core/presentation/: api.py
